Collect-TV-20180201/src/objects/TECHNET_Order__c.object
<CustomObject>
    <description>Object to store the submitted Dell-Corning orders</description>
    <fields>
        <fullName>TECHNET__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TECH-NET</label>
        <referenceTo>Tech_Net__c</referenceTo>
        <relationshipLabel>TECHNET Orders</relationshipLabel>
        <relationshipName>TECHNET_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TNET_Total_Order_Amount__c</fullName>
        <label>Total Order Quantity</label>
        <summarizedField>TECHNET_Transaction__c.Order_Quantity__c</summarizedField>
        <summaryForeignKey>TECHNET_Transaction__c.Transaction_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Order Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>TECHNET Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TNORD-{0000000}</displayFormat>
        <label>TECHNET Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Dell_Corning</fullName>
        <active>true</active>
        <label>Dell-Corning</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>